projects/vb6parse/snapshots/tests/library/type_checking/isnull/isnull_for_loop.snap
---
source: projects/vb6parse/tests/library/type_checking/isnull.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: IntegerKeyword
                  text: Integer
                - kind: Newline
                  text: "\n"
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "0"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: UBound
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: arr
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: IsNull
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: arr
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: IdentifierExpression
                                                  children:
                                                    - kind: Identifier
                                                      text: i
                                        - kind: RightParenthesis
                                          text: )
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: AssignmentStatement
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: arr
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: i
                                    - kind: RightParenthesis
                                      text: )
                                - kind: Whitespace
                                  text: " "
                                - kind: EqualityOperator
                                  text: "="
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "0"
                                - kind: Newline
                                  text: "\n"
                            - kind: Whitespace
                              text: "        "
                        - kind: EndKeyword
                          text: End
                        - kind: Whitespace
                          text: " "
                        - kind: IfKeyword
                          text: If
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
